Wrote theory about L0/1/2 regression

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -11,6 +11,8 @@
 
 \graphicspath{{img/}{../img/}}
 
+\setlength{\parindent}{0pt}
+
 \title{Project 1}
 \author{Knut Magnus Aasrud \\ Philip Karim Niane}
 \date{\today}
@@ -31,7 +33,7 @@
 
 \subfile{sections/conclusion}
 
-\section{Appendix}
+\subfile{sections/appendix}
 
 % \printbibliography
 
