Going to read through when I wake up

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -8,6 +8,7 @@
 \usepackage{amsmath}    % Math
 \usepackage{biblatex}   % Citations
 \usepackage{csquotes}   % Honestly no idea what this does...
+\usepackage{minted}
 
 \graphicspath{{img/}{../img/}}
 
@@ -26,6 +27,8 @@
 \subfile{sections/introduction}
 
 \subfile{sections/theory}
+
+\subfile{sections/method}
 
 \subfile{sections/results}
 
