Updates from Overleaf

--- a/doc/sections/theory.tex
+++ b/doc/sections/theory.tex
@@ -133,4 +133,14 @@ which - by the same proceedure as shown in \hyperref[sec:L0_matrix_form]{appenix
   \hat \beta^{\text{ridge}} = (\mathbf X^T\mathbf X + \lambda \mathbf I)^{-1}\mathbf X^T\mathbf y.
 \end{equation}
 
+\subsection{Bias-variance decomposition}
+
+\begin{align*}
+    \textbf{y}=f(\textbf{x})+\boldsymbol{\epsilon}
+\end{align*}
+
+\begin{align}
+    C(\boldsymbol{X}, \boldsymbol{\beta}) = \frac{1}{n}\sum_{}^{}
+\end{align}
+
 \end{document}
