Added K-fold CV to theory

--- a/doc/sections/appendix.tex
+++ b/doc/sections/appendix.tex
@@ -1,6 +1,7 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
+% ------------------------------------------------
 \section{Appendix}
 \subsection{Source code}
 All the source code is located in \href{https://github.com/kmaasrud/reg-resample-fys-stk4155}{this GitHub repository}.
@@ -34,5 +35,10 @@ Assuming full column rank for $\mathbf X$, $(\mathbf X^T \mathbf X)$ is thus pos
 \begin{equation*}
   \Rightarrow \hat \beta = (\mathbf X^T\mathbf X)^{-1}\mathbf X^T \mathbf y
 \end{equation*}
+
+
+% ------------------------------------------------
+\subsection{Deriving the bias-variance decomposition}\label{sec:bv_decomp}
+We a
 
 \end{document}
