--- a/doc/main.tex
+++ b/doc/main.tex
@@ -9,13 +9,17 @@
 \usepackage{biblatex}   % Citations
 \usepackage{csquotes}   % Honestly no idea what this does...
 \usepackage{minted}
+\usepackage{comment}
+\usepackage{amssymb}
+\usepackage[parfill]{parskip}
+\usepackage{cleveref}
 
 \graphicspath{{img/}{../img/}}
 
 \setlength{\parindent}{0pt}
 
 \title{Project 1}
-\author{Knut Magnus Aasrud \\ Philip Karim Niane}
+\author{Knut Magnus Aasrud \\ Philip Karim Niane \\ Ida Due-Sørensen}
 \date{\today}
 
 \begin{document}
