--- a/doc/sections/method.tex
+++ b/doc/sections/method.tex
@@ -12,7 +12,7 @@ It is natural to start wondering how the x and y data that is sent into the desi
 
 \subsection{Regression methods}
 \subsubsection{Ridge}
-To explain the implementation of the regression methods, it makes more sense to explain the ridge class first. The implemented ridge class starts of by defining different variables like the design matrix X, the dimensions n and p, y, lambdas lmb and the betas.\\
+To explain the implementation of the regression methods, it makes more sense to explain the ridge class first. The implemented ridge class starts of by defining different variables like the design matrix X, the dimensions n and p, y, lambdas lmb and the betas.
 
 Then the ridge coefficient vector is calculated the way explained in the theory section (\ref{rid}), which is easier to understand by seeing the code
 \begin{minted}{python}
