Bias-variance decomposition

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -8,13 +8,15 @@
 \usepackage{amsmath}    % Math
 \usepackage{biblatex}   % Citations
 \usepackage{csquotes}   % Honestly no idea what this does...
-
+\usepackage{comment}
+\usepackage{cleveref}
+\usepackage{amssymb}
 \graphicspath{{img/}{../img/}}
 
 \setlength{\parindent}{0pt}
 
 \title{Project 1}
-\author{Knut Magnus Aasrud \\ Philip Karim Niane}
+\author{Knut Magnus Aasrud \\ Philip Karim Niane \\ Ida Due-Sørensen}
 \date{\today}
 
 \begin{document}
